--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -11,12 +11,35 @@
   
   
   <link rel="stylesheet" href="/css/cayman.7accc14b2ada2922cd0b77ec5f880a0576dbf701ac685cc0b26199b78e3af866.css">
+  <title itemprop="name">Projects | Hakeem Almidan</title>
+  
+<meta property="og:title" content="Projects | Hakeem Almidan" />
+<meta name="twitter:title" content="Projects | Hakeem Almidan" />
+<meta itemprop="name" content="Projects | Hakeem Almidan" />
+<meta name="application-name" content="Projects | Hakeem Almidan" />
+<meta property="og:site_name" content="Hakeem Almidan" />
+
+
+<meta name="description" content="" />
+<meta itemprop="description" content="" />
+<meta property="og:description" content="" />
+<meta name="twitter:description" content="" />
+
+
+<base href="/projects/">
+<link rel="canonical" href="/projects/" itemprop="url" />
+<meta name="url" content="/projects/" />
+<meta name="twitter:url" content="/projects/" />
+<meta property="og:url" content="/projects/" />
+
+
+<link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml" />
+
   
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.css" integrity="sha384-yFRtMMDnQtDRO8rLpMIKrtPCD5jdktao2TV19YiZYWMDkUR5GQZR/NOVTdquEx1j" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js" integrity="sha384-9Nhn55MVVN0/4OFx7EE5kpFBPsEMZxKTCnA+4fqDmg12eCTqGi6+BB2LjY8brQxJ" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 
-  <title>Projects | Hakeem Almidan</title>
 </head>
 
 <body>
