--- a/public/about/index.html
+++ b/public/about/index.html
@@ -21,6 +21,19 @@
 
 
 
+  <meta name="description" content="Hi, I’m Hakeem. I have experience building full-stack applications in many languages and frameworks. What I&rsquo;ve learned over time is that the main mental challenge often lies in the logic behind what you are building, and not in the language/framework itself.
+Outside of work, I enjoy painting, playing volleyball, soccer, scuba diving, and hanging out with friends. I also enjoy reading about business and finance.
+I am currently looking for software engineering and finance positions and I would love to hear about your company!" />
+  <meta itemprop="description" content="Hi, I’m Hakeem. I have experience building full-stack applications in many languages and frameworks. What I&rsquo;ve learned over time is that the main mental challenge often lies in the logic behind what you are building, and not in the language/framework itself.
+Outside of work, I enjoy painting, playing volleyball, soccer, scuba diving, and hanging out with friends. I also enjoy reading about business and finance.
+I am currently looking for software engineering and finance positions and I would love to hear about your company!" />
+  <meta property="og:description" content="Hi, I’m Hakeem. I have experience building full-stack applications in many languages and frameworks. What I&rsquo;ve learned over time is that the main mental challenge often lies in the logic behind what you are building, and not in the language/framework itself.
+Outside of work, I enjoy painting, playing volleyball, soccer, scuba diving, and hanging out with friends. I also enjoy reading about business and finance.
+I am currently looking for software engineering and finance positions and I would love to hear about your company!" />
+  <meta name="twitter:description" content="Hi, I’m Hakeem. I have experience building full-stack applications in many languages and frameworks. What I&rsquo;ve learned over time is that the main mental challenge often lies in the logic behind what you are building, and not in the language/framework itself.
+Outside of work, I enjoy painting, playing volleyball, soccer, scuba diving, and hanging out with friends. I also enjoy reading about business and finance.
+I am currently looking for software engineering and finance positions and I would love to hear about your company!" />
+
 
 
 <base href="/about/">
