--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -21,6 +21,11 @@
 
 
 
+  <meta name="description" content="   Name Documentation Link Live Link     OSUChat docs live   WiRR docs live   Jewely docs live   Rails User Auth docs N/A   2048 Clone docs live    " />
+  <meta itemprop="description" content="   Name Documentation Link Live Link     OSUChat docs live   WiRR docs live   Jewely docs live   Rails User Auth docs N/A   2048 Clone docs live    " />
+  <meta property="og:description" content="   Name Documentation Link Live Link     OSUChat docs live   WiRR docs live   Jewely docs live   Rails User Auth docs N/A   2048 Clone docs live    " />
+  <meta name="twitter:description" content="   Name Documentation Link Live Link     OSUChat docs live   WiRR docs live   Jewely docs live   Rails User Auth docs N/A   2048 Clone docs live    " />
+
 
 
 <base href="/projects/">
