--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
   <link rel="stylesheet" href="/css/cayman.7accc14b2ada2922cd0b77ec5f880a0576dbf701ac685cc0b26199b78e3af866.css">
   <title itemprop="name">Blog | Hakeem Almidan</title>
   
+  
+  <link rel="alternate" type="application/rss+xml" href="/index.xml" title="Hakeem Almidan" />
+  
+
+  
 <meta property="og:title" content="Blog | Hakeem Almidan" />
 <meta name="twitter:title" content="Blog | Hakeem Almidan" />
 <meta itemprop="name" content="Blog | Hakeem Almidan" />
