Add description archetype to Blog, About, and Projects pages
+ Hugo generate

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,11 @@
 
 
 
+  <meta name="description" content="Blog page of Abdulhakeem (Hakeem) Almidan. The main topic of the blog is mainly programming but it can range to many other topics" />
+  <meta itemprop="description" content="Blog page of Abdulhakeem (Hakeem) Almidan. The main topic of the blog is mainly programming but it can range to many other topics" />
+  <meta property="og:description" content="Blog page of Abdulhakeem (Hakeem) Almidan. The main topic of the blog is mainly programming but it can range to many other topics" />
+  <meta name="twitter:description" content="Blog page of Abdulhakeem (Hakeem) Almidan. The main topic of the blog is mainly programming but it can range to many other topics" />
+
 
 
 <base href="/">
