--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -25,10 +25,10 @@
 
 
 
-  <meta name="description" content="   Name Documentation Link Live Link     OSUChat docs live   WiRR docs live   Jewely docs live   Rails User Auth docs N/A   2048 Clone docs live    " />
-  <meta itemprop="description" content="   Name Documentation Link Live Link     OSUChat docs live   WiRR docs live   Jewely docs live   Rails User Auth docs N/A   2048 Clone docs live    " />
-  <meta property="og:description" content="   Name Documentation Link Live Link     OSUChat docs live   WiRR docs live   Jewely docs live   Rails User Auth docs N/A   2048 Clone docs live    " />
-  <meta name="twitter:description" content="   Name Documentation Link Live Link     OSUChat docs live   WiRR docs live   Jewely docs live   Rails User Auth docs N/A   2048 Clone docs live    " />
+  <meta name="description" content="Projects of Abdulhakeem (Hakeem) Almidan. Made with technologies ranging from Ruby on Rails, Express, React, Redux, CSS, Sass, and many others" />
+  <meta itemprop="description" content="Projects of Abdulhakeem (Hakeem) Almidan. Made with technologies ranging from Ruby on Rails, Express, React, Redux, CSS, Sass, and many others" />
+  <meta property="og:description" content="Projects of Abdulhakeem (Hakeem) Almidan. Made with technologies ranging from Ruby on Rails, Express, React, Redux, CSS, Sass, and many others" />
+  <meta name="twitter:description" content="Projects of Abdulhakeem (Hakeem) Almidan. Made with technologies ranging from Ruby on Rails, Express, React, Redux, CSS, Sass, and many others" />
 
 
 
