Fix post + hugo generate

--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
 
 
 
-  <meta name="description" content="Blog page of Abdulhakeem (Hakeem) Almidan. The main topic of the blog is mainly programming but it can range to many other topics" />
-  <meta itemprop="description" content="Blog page of Abdulhakeem (Hakeem) Almidan. The main topic of the blog is mainly programming but it can range to many other topics" />
-  <meta property="og:description" content="Blog page of Abdulhakeem (Hakeem) Almidan. The main topic of the blog is mainly programming but it can range to many other topics" />
-  <meta name="twitter:description" content="Blog page of Abdulhakeem (Hakeem) Almidan. The main topic of the blog is mainly programming but it can range to many other topics" />
+  <meta name="description" content="Blog page of Abdulhakeem (Hakeem) Almidan. The main topic of the blog is mainly programming but it can range to many other topics. Browse blog by categories or tags." />
+  <meta itemprop="description" content="Blog page of Abdulhakeem (Hakeem) Almidan. The main topic of the blog is mainly programming but it can range to many other topics. Browse blog by categories or tags." />
+  <meta property="og:description" content="Blog page of Abdulhakeem (Hakeem) Almidan. The main topic of the blog is mainly programming but it can range to many other topics. Browse blog by categories or tags." />
+  <meta name="twitter:description" content="Blog page of Abdulhakeem (Hakeem) Almidan. The main topic of the blog is mainly programming but it can range to many other topics. Browse blog by categories or tags." />
 
 
 
@@ -97,6 +97,7 @@
 
   <section class="main-content">
     
+  
   <h1>Blog</h1>
   
     <div class="blog-nav__container">
