--- a/public/about/index.html
+++ b/public/about/index.html
@@ -95,9 +95,9 @@
     
   <h1>About</h1>
   <p>Hi,
-I’m Hakeem. I have experience building full-stack applications in many languages and frameworks. What I&rsquo;ve learned over time is that the main mental challenge often lies in the logic behind what you are building, and not in the language/framework itself.</p>
+I’m Abdulhakeem. You can call me Hakeem. I have experience building full-stack applications in many languages and frameworks. What I’ve learned over time is that the main mental challenge often lies in the logic behind what you&rsquo;re building, and not in the language/framework itself.</p>
 <p>Outside of work, I enjoy painting, playing volleyball, soccer, scuba diving, and hanging out with friends. I also enjoy reading about business and finance.</p>
-<p>I am currently looking for software engineering and finance positions and I would love to hear about your company!</p>
+<p>I&rsquo;m currently looking for software engineering and finance positions and I&rsquo;d love to hear about your company!</p>
 <p>You can find me on:</p>
 
 
