--- a/public/hugo-vs-jekyll/index.html
+++ b/public/hugo-vs-jekyll/index.html
@@ -25,13 +25,13 @@
 
 
 
-  <meta name="description" content="&lt;nil&gt; What are static websites? In simple terms, static websites are a collection of webpages that have fixed content. They are the most basic type of website and are typically considered the easiest to create.
+  <meta name="description" content="%!s(&lt;nil&gt;) What are static websites? In simple terms, static websites are a collection of webpages that have fixed content. They are the most basic type of website and are typically considered the easiest to create.
 These websites are considered the easiest to create because they have a low barrier of entry. They are usually not connected to a backend or a database, so the only thing that you will need to manage is the frontend." />
-  <meta itemprop="description" content="&lt;nil&gt; What are static websites? In simple terms, static websites are a collection of webpages that have fixed content. They are the most basic type of website and are typically considered the easiest to create.
+  <meta itemprop="description" content="%!s(&lt;nil&gt;) What are static websites? In simple terms, static websites are a collection of webpages that have fixed content. They are the most basic type of website and are typically considered the easiest to create.
 These websites are considered the easiest to create because they have a low barrier of entry. They are usually not connected to a backend or a database, so the only thing that you will need to manage is the frontend." />
-  <meta property="og:description" content="&lt;nil&gt; What are static websites? In simple terms, static websites are a collection of webpages that have fixed content. They are the most basic type of website and are typically considered the easiest to create.
+  <meta property="og:description" content="%!s(&lt;nil&gt;) What are static websites? In simple terms, static websites are a collection of webpages that have fixed content. They are the most basic type of website and are typically considered the easiest to create.
 These websites are considered the easiest to create because they have a low barrier of entry. They are usually not connected to a backend or a database, so the only thing that you will need to manage is the frontend." />
-  <meta name="twitter:description" content="&lt;nil&gt; What are static websites? In simple terms, static websites are a collection of webpages that have fixed content. They are the most basic type of website and are typically considered the easiest to create.
+  <meta name="twitter:description" content="%!s(&lt;nil&gt;) What are static websites? In simple terms, static websites are a collection of webpages that have fixed content. They are the most basic type of website and are typically considered the easiest to create.
 These websites are considered the easiest to create because they have a low barrier of entry. They are usually not connected to a backend or a database, so the only thing that you will need to manage is the frontend." />
 
 
