Remove website tagline + hugo generate

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -73,7 +73,7 @@ I&amp;rsquo;m currently looking for software engineering and finance positions a
     Hakeem Almidan
   </h1>
   <h2 class="project-tagline">
-    A software engineer currently looking for a job
+    project_tagline goes here
   </h2>
   <nav>
     
