--- a/public/hugo-vs-jekyll/index.html
+++ b/public/hugo-vs-jekyll/index.html
@@ -69,7 +69,7 @@ These websites are considered the easiest to create because they have a low barr
     Hakeem Almidan
   </h1>
   <h2 class="project-tagline">
-    A software engineer currently looking for a job
+    project_tagline goes here
   </h2>
   <nav>
     
