--- a/public/css-hover-on-mobile/index.html
+++ b/public/css-hover-on-mobile/index.html
@@ -81,7 +81,7 @@ Solution 1: SCSS Mixin The mixin:
     Hakeem Almidan
   </h1>
   <h2 class="project-tagline">
-    A software engineer currently looking for a job
+    project_tagline goes here
   </h2>
   <nav>
     
