--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<script>console.log({"Lang":"en","LanguageName":"","LanguageDirection":"","Title":"","Weight":0,"Disabled":false,"ContentDir":"","Cfg":{}})</script>
 <html class="nojs" lang="en" dir="ltr">
 <head>
 <meta charset="utf-8">
@@ -23,7 +24,7 @@
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 <link rel="stylesheet" href="/css/mobile.2ab74aa64785dcab8114959e76ca140cf76207cd85989bc6d4fc3b12f734a09e.css" media="screen">
-<link rel="stylesheet" href="/css/styles.c54ff38eff6d70715b4654deabb9e7df18a1123e03d0792eaef3dee698730427.css">
+<link rel="stylesheet" href="/css/styles.ce5715105f223f001881b8fa7926a9d00c05bd0afd8820b88d2ba81abd8ad7fb.css">
 <link rel="stylesheet" href="/css/print.27fc184f8670f41a2690985390779e7b20335a8fadff8fa015cf9417ffe50c36.css" media="print">
 
 <script type="application/ld+json">
@@ -76,7 +77,7 @@
 <ul class="navbar">
 <li><a href="/">Home</a></li>
 <li><a href="/about/" class="active" aria-current="page">About</a></li>
-<li><a href="/post/">Post</a></li>
+<li><a href="/posts/">Posts</a></li>
 </ul>
 </nav>
 
@@ -134,12 +135,12 @@ I’m Abdulhakeem. You can call me Hakeem. I have experience building full-stack
 
 <aside class="sidebar layout__second-sidebar">
 <section>
-<h4 class="menu"><a href="/post/">Post</a></h4>
+<h4 class="menu"><a href="/posts/">Posts</a></h4>
 <ul class="menu">
-<li><a href="/post/puffin-multiple-fish-in-beak-wonder/">Why do puffins often have mutliple fish in their beaks at once?</a></li>
-<li><a href="/post/scss-animation-mixin/">SCSS Animation Mixin</a></li>
-<li><a href="/post/css-hover-on-mobile/">How to Prevent CSS Hover State From Getting stuck on Mobile Browsers</a></li>
-<li><a href="/post/hugo-vs-jekyll/">Choosing a Static Website Generator: Hugo vs. Jekyll</a></li>
+<li><a href="/posts/puffin-multiple-fish-in-beak-wonder/">Why do puffins often have mutliple fish in their beaks at once?</a></li>
+<li><a href="/posts/scss-animation-mixin/">SCSS Animation Mixin</a></li>
+<li><a href="/posts/css-hover-on-mobile/">How to Prevent CSS Hover State From Getting stuck on Mobile Browsers</a></li>
+<li><a href="/posts/hugo-vs-jekyll/">Choosing a Static Website Generator: Hugo vs. Jekyll</a></li>
 </ul>
 </section>
 </aside>
@@ -162,7 +163,7 @@ I’m Abdulhakeem. You can call me Hakeem. I have experience building full-stack
     <ul class="mobile-nav__navbar">
     <li><a href="/">Home</a></li>
     <li><a href="/about/" class="active" aria-current="page">About</a></li>
-    <li><a href="/post/">Post</a></li>
+    <li><a href="/posts/">Posts</a></li>
     </ul>
     </nav>
   </div>
