--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
+
 <title>Hakeem Almidan</title>
 <link rel="alternate" type="application/rss+xml" title="RSS" href="http://hakeem-almidan.com/index.xml">
 <link rel="alternate" type="application/json" title="JSON" href="http://hakeem-almidan.com/index.json">
@@ -74,9 +75,8 @@
 <nav class="main-menu layout__navigation">
 <h2 class="visually-hidden">Main menu</h2>
 <ul class="navbar">
-<li><a href="/" class="active" aria-current="page">Home</a></li>
+<li><a href="/" class="active" aria-current="page">Posts</a></li>
 <li><a href="/about/">About</a></li>
-<li><a href="/posts/">Posts</a></li>
 </ul>
 </nav>
 
@@ -144,7 +144,7 @@ These websites are considered the easiest to create because they have a low barr
 
 <aside class="sidebar layout__second-sidebar">
 <section>
-<h4 class="menu"><a href="/posts/">Posts</a></h4>
+<h4 class="menu">Posts by title</h4>
 <ul class="menu">
 <li><a href="/posts/puffin-multiple-fish-in-beak-wonder/">Why do puffins often have mutliple fish in their beaks at once?</a></li>
 <li><a href="/posts/scss-animation-mixin/">SCSS Animation Mixin</a></li>
