--- a/public/about/index.html
+++ b/public/about/index.html
@@ -126,7 +126,7 @@ I’m Abdulhakeem. You can call me Hakeem. I have experience building full-stack
 
 <h3 id="about-website">About website</h3>
 <p>Like what you&rsquo;re seeing? Subscribe below to recieve notifications of new posts ⬇️</p>
-<p>Promise not to send more than 1 email per month (not counting subscription confirmation email 🙄) 🤞
+<p>Promise not to send more than 1 email per month (not counting subscription confirmation email) 👨‍💻
 
 
 <!-- Begin Mailchimp Signup Form -->
@@ -155,7 +155,7 @@ I’m Abdulhakeem. You can call me Hakeem. I have experience building full-stack
 <section>
 <h4 class="menu">Posts by title</h4>
 <ul class="menu">
-<li><a href="/posts/terminal-search/">Stop Arrowing Up So Much In Terminal; Search Instead! (in Linux/Unix (Mac))</a></li>
+<li><a href="/posts/terminal-search/">Stop Arrowing Up So Much In Terminal; Search Instead! (Linux/Unix)</a></li>
 <li><a href="/posts/custom-promotion-code-cli/">Useful Tools that Helped in Building a Custom Promotion-Code CLI (built in Ruby)</a></li>
 <li><a href="/posts/puffin-multiple-fish-in-beak-wonder/">Why do puffins often have mutliple fish in their beaks at once?</a></li>
 <li><a href="/posts/scss-animation-mixin/">SCSS Animation Mixin</a></li>
