--- a/public/about/index.html
+++ b/public/about/index.html
@@ -154,7 +154,7 @@ I’m Abdulhakeem. You can call me Hakeem. I have experience building full-stack
 <section>
 <h4 class="menu">Posts by title</h4>
 <ul class="menu">
-<li><a href="/posts/lsdir/">lsdir - A Linux/Unix/MacOS `ls` Alias for Only Listing Directories</a></li>
+<li><a href="/posts/lsdir/">lsdir - A Shell Alias for Only Listing Directories</a></li>
 <li><a href="/posts/terminal-search/">Stop Arrowing Up So Much In Terminal; Search Instead! (Linux/Unix)</a></li>
 <li><a href="/posts/custom-promotion-code-cli/">Useful Tools that Helped in Building a Custom Promotion-Code CLI (built in Ruby)</a></li>
 <li><a href="/posts/puffin-multiple-fish-in-beak-wonder/">Why do puffins often have mutliple fish in their beaks at once?</a></li>
