--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
 
 <article class="section-posts list-view">
 <header>
-<h2 class="title "><a href="/posts/lsdir/">lsdir - A Linux/Unix/MacOS `ls` Alias for Only Listing Directories</a></h2>
+<h2 class="title "><a href="/posts/lsdir/">lsdir - A Shell Alias for Only Listing Directories</a></h2>
 
 </header>
 <div class="content">
@@ -194,7 +194,7 @@ These websites are considered the easiest to create because they have a low barr
 <section>
 <h4 class="menu">Posts by title</h4>
 <ul class="menu">
-<li><a href="/posts/lsdir/">lsdir - A Linux/Unix/MacOS `ls` Alias for Only Listing Directories</a></li>
+<li><a href="/posts/lsdir/">lsdir - A Shell Alias for Only Listing Directories</a></li>
 <li><a href="/posts/terminal-search/">Stop Arrowing Up So Much In Terminal; Search Instead! (Linux/Unix)</a></li>
 <li><a href="/posts/custom-promotion-code-cli/">Useful Tools that Helped in Building a Custom Promotion-Code CLI (built in Ruby)</a></li>
 <li><a href="/posts/puffin-multiple-fish-in-beak-wonder/">Why do puffins often have mutliple fish in their beaks at once?</a></li>
